[package]
name = "date-formatter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/sivanbil/date-formatter"
description = "A date formatter crate implemented without any third-party dependencies."
license = "MIT"

[dependencies]
chrono = "0.4"